# FriendlySplat

./: MANIFEST.in  README.md  formatter.sh  pyproject.toml  setup.py
benchmarks/geo_quality/: README.md  preprocess_dtu_batch.py  preprocess_tnt_batch.py  run_eval_dtu_batch.py  run_eval_tnt_batch.py  run_moge_priors_dtu_batch.py  run_moge_priors_tnt_batch.py  run_train_dtu_batch.py  run_train_tnt_batch.py
benchmarks/pruning_visual_quality/: README.md  run_eval_batch.py  run_train_batch.py
benchmarks/strategies_visual_quality/: README.md  run_eval_batch.py  run_train_batch.py
benchmarks/urban_scenes_visual_geo_quality/: README.md  preprocess_gauu_batch.py  run_matrixcity_coarse.sh  run_matrixcity_partition_train.sh
benchmarks/urban_scenes_visual_quality/: README.md  eval_single_scene.py  merge_partitions_ckpt.py  partition_from_coarse.py  preprocess_gauu_batch.py  run_gauu_benchmark.sh  run_matrixcity_coarse.sh  run_matrixcity_partition_train.sh  summarize_gauu_benchmark.py  summarize_matrixcity_benchmark.py
benchmarks/visual_quality/: README.md  run_eval_batch.py  run_train_batch.py
friendly_splat/: __init__.py  requirements.txt  train_app.py  trainer.py  view_app.py  viewer.py
friendly_splat/data/: colmap_dataparser.py  colmap_io.py  dataloader.py  dataset.py  image_io.py  scene_transform.py
friendly_splat/models/: __init__.py  bilateral_grid.py  camera_opt.py  gaussian.py  postprocess.py  ppisp.py
friendly_splat/modules/: __init__.py  bilateral_grid.py  gaussian.py  pose_opt.py
gsplat/: __init__.py  exporter.py  relocation.py  rendering.py  sog_exporter.py  utils.py
gsplat/cuda/: _wrapper.py  (+1 more)
tests/: convert_ply_to_sog.py  test_median_depth_batch_render.py  test_normals_batch_render.py  test_sog_export.py
tools/: __init__.py  requirements.txt
(+65 files in other folders)
